--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "react-homework-template",
+  "name": "genesis_test_task",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://KaterynaChernetska.github.io/genesis_test_task/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
+    "axios": "^1.3.4",
+    "notiflix": "^3.2.6",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-hls-player": "^3.0.7",
+    "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-player": "^2.12.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.59.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -36,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "video.js": "^8.0.4"
   }
 }
