--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "@videojs/http-streaming": "^3.0.0",
     "axios": "^1.3.4",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
+    "video.js": "^8.0.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
