--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@videojs/http-streaming": "^3.0.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.3.0-alpha1",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
