--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@videojs/http-streaming": "^3.0.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
+    "i": "^0.3.7",
     "notiflix": "^3.2.6",
+    "npm": "^9.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.8.0",
@@ -19,7 +21,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
-    "video.js": "^8.0.4",
+    "video.js": "^7.21.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -46,8 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "video.js": "^8.0.4"
   }
 }
